--- a/app/views/aplausos/show.html.erb
+++ b/app/views/aplausos/show.html.erb
@@ -1,5 +1,42 @@
+<style>
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 100vh;
+  }
+
+  .content {
+    text-align: center;
+    color: black;
+    font-size: 24px;
+    max-width: 80%;
+  }
+
+  h1 {
+    text-align: center;
+    color: black;
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+</style>
+
 <h1><%= @aplauso.nombre %></h1>
-<p><%= @aplauso.descripcion %></p>
-<div class="btn-back-container">
-  <%= link_to 'Volver', aplausos_path, class: "btn-back" %>
+
+<div class="container">
+  <div class="content">
+    <p><%= @aplauso.descripcion %></p>
+
+    <% if @aplauso.image.present? %>
+      <div>
+        <%= image_tag @aplauso.image.url %>
+      </div>
+    <% end %>
+
+    <div class="btn-back-container">
+      <%= link_to 'Volver', aplausos_path, class: "btn-back" %>
+    </div>
+  </div>
 </div>
+
