--- a/app/views/juegos/_form.html.erb
+++ b/app/views/juegos/_form.html.erb
@@ -1,27 +1,32 @@
-<%= form_with(model: juego) do |form| %>
+<%= form_with(model: juego, local: true) do |form| %>
   <% if juego.errors.any? %>
-    <div style="color: red">
+    <div id="error_explanation">
       <h2><%= pluralize(juego.errors.count, "error") %> prohibited this juego from being saved:</h2>
 
       <ul>
-        <% juego.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% juego.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :nombre, style: "display: block" %>
+  <div class="field">
+    <%= form.label :nombre %>
     <%= form.text_field :nombre %>
   </div>
 
-  <div>
-    <%= form.label :descripcion, style: "display: block" %>
+  <div class="field">
+    <%= form.label :descripcion %>
     <%= form.text_area :descripcion %>
   </div>
 
-  <div>
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
+  <div class="actions">
     <%= form.submit %>
   </div>
 <% end %>
