--- a/app/views/aplausos/show.html.erb
+++ b/app/views/aplausos/show.html.erb
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     height: 100vh;
+    position: relative;
   }
 
   .content {
@@ -20,11 +20,37 @@
     font-size: 36px;
     margin-bottom: 20px;
   }
+
+  .btn-upload {
+    position: absolute;
+    top: 10px; /* Reduce the top margin to position it well in the corner */
+    right: 10px; /* Reduce the right margin to position it well in the corner */
+    background-color: #4b0082; /* Dark purple color */
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  .btn-upload input[type="file"] {
+    display: none;
+  }
+
+  .btn-back-container {
+    margin-top: 20px;
+  }
 </style>
 
 <h1><%= @aplauso.nombre %></h1>
 
 <div class="container">
+  <form action="<%= upload_image_aplauso_path(@aplauso) %>" method="post" enctype="multipart/form-data" class="btn-upload">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <label for="file-upload" class="btn-upload-label">Agregar Foto</label>
+    <input type="file" name="aplauso[image]" id="file-upload" onchange="this.form.submit()">
+  </form>
+
   <div class="content">
     <p><%= @aplauso.descripcion %></p>
 
